--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -10,5 +10,5 @@
   <%= @student.section %>
 </p>
 
-<%= link_to 'Edit', edit_student_path(@student) %> |
+<%= link_to 'Edit', edit_student_path(@student) %>
 <%= link_to 'Back', teacher_students_path(@teacher) %>
